<resources>
    <string name="app_name" translatable="false">Shippo</string>
    <string name="font_family_light" translatable="false">sans-serif-light</string>
    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
    <string name="font_family_regular" translatable="false">sans-serif</string>
    <string name="font_family_condensed" translatable="false">sans-serif-condensed</string>
    <string name="font_family_black" translatable="false">sans-serif-black</string>
    <string name="font_family_thin" translatable="false">sans-serif-thin</string>
    <string name="feed">Home</string>
    <string name="trending">Trending</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="email" translatable="false">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="complete_signup">Complete Sign Up</string>
    <string name="username">Username</string>
    <string name="bio" translatable="false">Bio</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="passwords_dismatch">Passwords does not match</string>
    <string name="ok" translatable="false">OK</string>
    <string name="require_password">Password is required</string>
    <string name="password_too_weak">Password too weak</string>
    <string name="empty_email">Email is required</string>
    <string name="invalid_email">Enter a valid email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth">Birth</string>
    <string name="creating_account">Creating Account</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="login" translatable="false">Login</string>
    <string name="create_account">Does not have an account? Join us now!</string>
    <string name="sup_fb">Sign up with Facebook</string>
    <string name="age">Age</string>
    <string name="like">Like</string>
    <string name="unlike" translatable="false">Unlike</string>
    <string name="shipp_summaries">%1$d shipps, %2$d don\'t shipp and %3$d comments.</string>
    <string name="type_something">Type something cool...</string>
    <string name="create_shipp">Create Shipp</string>
    <string name="all">All</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="email_pass_error">Incorrect email or/and password</string>
    <string name="loginig">Signing in...</string>
    <string name="hour_ago">%d hour ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="just_now">Just now</string>
    <string name="days_ago">%d days ago</string>
    <string name="years">%d yo</string>
    <string name="done">Done</string>
    <string name="tags" translatable="false">Tags</string>
    <string name="placeholder" translatable="false">Imagine here some noisy text with a few lines talking about the owner feeling over the shipp which he have created so far</string>
    <string name="shipp_created_successfully">The shipp was created</string>
    <string name="country">Country</string>
    <string name="fetching_data">Fetching data...</string>
    <string name="loging_fb">Connecting with Facebook...</string>
    <string name="fb_login_error">Try again</string>
    <string name="wire_strange">Is your connection working? Try again, please.</string>
    <string name="comments">Comments</string>
    <string name="num_holder" translatable="false">5K</string>
    <string name="respond">REPLY</string>
    <string name="your_comment">Your comment</string>
    <string name="comment">Comment</string>
    <string name="error">Erro</string>
    <string name="error_try_again">There was an error! Please, try again.</string>
    <string name="m_ago" translatable="false">%dm</string>
    <string name="h_ago" translatable="false">%dh</string>
    <string name="d_ago" translatable="false">%dd</string>
    <string name="action_settings">Settings</string>
    <string name="shipps" translatable="false">Shipps</string>
    <string name="people">People</string>
    <string name="order_results_by">Order results by</string>
    <string name="range_results_for">Range of results</string>
    <string name="country_of_results">Country of results</string>
    <string name="location">Location</string>
    <string name="placeholder_email" translatable="false">yourname@email.com</string>
    <string name="placeholder_location">New York, USA</string>
    <string name="location_explain">Type your location</string>
    <string name="country_spinner_help">Select your country</string>
    <string name="username_holder">Type your name</string>
    <string name="placeholder_username">John VII</string>
    <string name="placeholder_birth" translatable="false">dd/mm/yyyy</string>
    <string name="birth_holder">Type your birthday</string>
    <string name="bio_holder">Type your interests, goals, wishes…</string>
    <string name="email_holder">Type your email</string>
    <string name="password_holder">Insert a safe password</string>
    <string name="placeholder_password" translatable="false">********</string>
    <string name="username_too_short">Username is too short</string>
    <string name="invalid_date">Insert a valid date</string>
    <string name="city_or_country_missing">Please select a city</string>
    <string name="location_error">Location permission wasn\'t granted</string>
    <string name="follower_count">%s followers</string>
    <string name="following_count">%s following</string>
    <string name="activity">Activity</string>
    <string name="info">Info</string>
    <string name="followers">Followers</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="private_perfil">Private Perfil</string>
    <string name="log_off">Log Off</string>
    <string name="delete_account">Delete Account</string>
    <string name="about">About</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="time_placeholder" translatable="false">12:24</string>
    <string name="sure_logoff">You\'re about to log off</string>
    <string name="cancel">Cancel</string>
    <string name="new_">New</string>
    <string name="controversial">Controversial</string>
    <string name="popular">Popular</string>
    <string name="recommended">Recommended</string>
    <string name="my_city">My City</string>
    <string name="miles180">180 miles</string>
    <string name="my_country">My Country</string>
    <string name="world_wide">World Wide</string>
    <string name="my_country_formatted">My Country: %s</string>
    <string name="pick_country">Pick another country</string>
    <string name="search_country_out_advise" translatable="false">We advise that results may become imprecise with country changing</string>
    <string name="reply_to"><![CDATA[Reply to <b>%s</b>]]></string>
    <string name="conversation">Chats</string>
    <string name="type_here">Type here</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="audio_not_avaliable">Audio is not avaliable anymore</string>
    <string name="audio" translatable="false">♫ Audio • %s</string>
    <string name="picture">Picture</string>
    <string name="audio_simple" translatable="false">Audio • %s</string>
    <string name="preview">Preview</string>
    <string name="block_user">Block user</string>
    <string name="delete_chat">Delete chat</string>
    <string name="silence_for">Silence for</string>
    <string name="see_media">See media</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="delete">Delete</string>
    <string name="image_not_avaliable">Image not avaliable</string>
    <string name="date_with_day" translatable="false">EEE hh:mm • dd/MM/yy</string>
    <string name="silence">Silence</string>
    <string name="user_muted_successfully">"Chat was muted "</string>
    <string name="media_shared_with">Media</string>
    <string name="image">Image</string>
    <string name="ooops">Ooops! Sorry, no results found.</string>
    <string name="interests">Interests</string>
    <string name="shipp_created_to_format"><![CDATA[<b>%s</b> created a shipp between <b>%s</b> and <b>%s</b>]]></string>
    <string name="user_liked_to_format"><![CDATA[<b>%s</b> shipps  <b>%s</b> and <b>%s</b>]]></string>
    <string name="user_disliked_to_format"><![CDATA[<b>%s</b> doesn\'t shipp  <b>%s</b> and <b>%s</b>]]></string>
    <string name="network_error">There was a network error...Try again</string>
    <string name="forgot_password">Forgot your password? Click here</string>
    <string name="later">Later</string>
    <string name="started_follow_to_format"><![CDATA[<b>%s</b> started to follow you]]></string>
    <string name="accepted_follow_to_format"><![CDATA[<b>%s</b> accepted your request]]></string>
    <string name="you">You</string>
    <string name="pick_a_picture">Pick a picture</string>
    <string name="shipp_shared">Oww! Shipp shared!</string>
    <string name="report">Report</string>
    <string name="feed_is_empty">Your feed is empty</string>
    <string name="follow_people">Follow people</string>
    <string name="try_again">Try again</string>
    <string name="collide_account_error">There is already have an account with this email but it\'s not linked to this Facebook account. Please login with your email then link it to your Facebook account.</string>
    <string name="got_it">Got it!</string>
    <string name="forgot_my_pass">Forgot my password</string>
    <string name="send">send</string>
    <string name="reset_password">Reset password</string>
    <string name="email_sent">Email was sent. Check your inbox!</string>
    <string name="email_not_sent">Email is not linked to any account.</string>
    <string name="sending">Sending...</string>
    <string name="people_suggest">Recommended People</string>
    <string name="like_shipp"><![CDATA[ and more <b>%d</b> shipps  <b>%s</b> and <b>%s</b>]]></string>
    <string name="unlike_shipp"><![CDATA[ and more <b>%d</b> don\'t shipp  <b>%s</b> and <b>%s</b>]]></string>
    <string name="commented_shipp"><![CDATA[ and <b>%d</b> more commented the shipp of <b>%s</b> and <b>%s</b>]]></string>
    <string name="and"> and </string>
    <string name="notifications">Notfications</string>
    <string name="edit">Edit</string>
    <string name="change_profile_pic">Change profile picture</string>
    <string name="update_picture_fail_error">Error on update profile picture</string>
    <string name="photo_updated">Profile picture was updated!</string>
    <string name="save">Save</string>
    <string name="bio_updated">Bio was updated!</string>
    <string name="confirm_delete_shipp">Do you really want to delete this shipp?</string>
    <string name="yes">Yep!</string>
    <string name="loading" translatable="false">...</string>
    <string name="filter_by">Filter by</string>
    <string name="only_friends">Only friends</string>
    <string name="filte">Filter</string>
    <string name="apply">Apply</string>
    <string name="creating_shipp">Just a sec...</string>
    <string name="random">I\'m lucky</string>
    <string name="support">Support</string>
    <string name="other_settings">Other settings</string>
    <string name="account_settings">Account settings</string>
    <string name="pay_some_coffee">Pay us some coffee</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_agreement">I agree with Terms of Service and Privacy Policy</string>
    <string name="allow">Accept</string>
    <string name="pending">Pending</string>
    <string name="user_pending"><![CDATA[<b>%s</b> wants to follow you]]></string>
</resources>