<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding"
    android:theme="@style/AppTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:text="@string/filter_by"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding">

        <RadioButton
            android:id="@+id/radio_button_world_wide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/world_wide" />

        <RadioButton
            android:id="@+id/radio_button_my_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_country" />

        <RadioButton
            android:id="@+id/radio_button_180miles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miles180" />

        <RadioButton
            android:id="@+id/radio_button_my_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_city" />

        <RadioButton
            android:id="@+id/radio_button_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_country" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/other_country_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_of_results" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_only_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="@dimen/small_padding"
        android:text="@string/only_friends"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/medium_padding"
        android:text="@string/apply"
        android:textSize="17sp"
        android:textStyle="bold" />
</LinearLayout>