<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10">


    <ImageView
        android:id="@+id/signup_base_icon"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/large_padding"
        android:layout_weight="3"
        app:srcCompat="@drawable/map_marker_radius" />

    <TextView
        android:id="@+id/signup_base_textview_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/signup_base_gender_views"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="10">

        <android.support.v7.widget.CardView
            android:id="@+id/signup_base_card_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/signup_base_iv_female"
                    app:srcCompat="@drawable/human_female" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/medium_padding"
                    android:text="@string/female"
                    android:id="@+id/signup_base_tv_female"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/grey_300" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <android.support.v7.widget.CardView
            android:id="@+id/signup_base_card_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="0dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/signup_base_iv_male"
                    app:srcCompat="@drawable/human_male" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/medium_padding"
                    android:id="@+id/signup_base_tv_male"
                    android:text="@string/male"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/grey_300" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_base_text_views"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="@dimen/xlarge_padding">

        <TextView
            android:id="@+id/signup_base_textview_helper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <Spinner
            android:id="@+id/signup_base_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dialog"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/singup_base_iv_gps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/small_padding"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_gps_find_me" />

            <AutoCompleteTextView
                android:id="@+id/signup_base_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textAutoComplete"
                android:hint="@string/placeholder_location"
                android:visibility="gone" />
        </LinearLayout>


        <android.support.text.emoji.widget.EmojiAppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_base_edit_text"
            android:hint="@string/placeholder_email"
            android:visibility="gone" />
    </LinearLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/user_agreement"
            android:clickable="true"
            android:visibility="gone"
            android:layout_height="wrap_content" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/signup_base_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_next_white"
        app:useCompatPadding="true" />
</LinearLayout>