<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_results_by"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <Spinner
            android:id="@+id/fragment_search_filter_sp_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="150dp"
            android:entries="@array/type_select_results"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/range_results_for"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <Spinner
            android:id="@+id/fragment_search_filter_sp_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/range_results_for"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <SeekBar
            style="@style/MyDiscreteSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="10"
            android:progress="2"
            android:theme="@style/MyDiscreteSeekBar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_search_filter_country_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_of_results"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <Spinner
            android:id="@+id/fragment_search_filter_sp_countries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/medium_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_info_outline_darker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/search_country_out_advise"
                android:textColor="@color/grey_700" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>